tests/agl/rejections/type/strict_json_on_text_codec.agl
let x: text = exec("ls", strict_json = true)
x
